--- a/test-output/old/Hub spot Test automtion regression suite/methods.html
+++ b/test-output/old/Hub spot Test automtion regression suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Hub spot Test automtion regression suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f67a91">  <td>20/06/07 07:21:43</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@632aa1a3]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@920808000</td>   <td></td> </tr>
-<tr bgcolor="ad9fe7">  <td>20/06/07 07:21:51</td>   <td>7318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLinkTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@632aa1a3]">verifySignUpLinkTest</td> 
-  <td>TestNG-tests-1@920808000</td>   <td></td> </tr>
-<tr bgcolor="ad9fe7">  <td>20/06/07 07:21:56</td>   <td>12751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyGetLoginPagetitleTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@632aa1a3]">verifyGetLoginPagetitleTest</td> 
-  <td>TestNG-tests-1@920808000</td>   <td></td> </tr>
-<tr bgcolor="ad9fe7">  <td>20/06/07 07:21:56</td>   <td>12810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpWithGoogleTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@632aa1a3]">verifySignUpWithGoogleTest</td> 
-  <td>TestNG-tests-1@920808000</td>   <td></td> </tr>
-<tr bgcolor="ad9fe7">  <td>20/06/07 07:21:56</td>   <td>12877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyDoLoginTest()[pri:4, instance:com.qa.hubspot.tests.LoginPageTest@632aa1a3]">verifyDoLoginTest</td> 
-  <td>TestNG-tests-1@920808000</td>   <td></td> </tr>
-<tr bgcolor="f67a91">  <td>20/06/07 07:21:57</td>   <td>13501</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@632aa1a3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@920808000</td>   <td></td> </tr>
+<tr bgcolor="8bad7c">  <td>20/06/10 10:37:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@5a4ed68f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@466822101</td>   <td></td> </tr>
+<tr bgcolor="718392">  <td>20/06/10 10:37:18</td>   <td>7040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLinkTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@5a4ed68f]">verifySignUpLinkTest</td> 
+  <td>TestNG-tests-1@466822101</td>   <td></td> </tr>
+<tr bgcolor="718392">  <td>20/06/10 10:37:23</td>   <td>12583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyGetLoginPagetitleTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@5a4ed68f]">verifyGetLoginPagetitleTest</td> 
+  <td>TestNG-tests-1@466822101</td>   <td></td> </tr>
+<tr bgcolor="718392">  <td>20/06/10 10:37:23</td>   <td>12612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpWithGoogleTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@5a4ed68f]">verifySignUpWithGoogleTest</td> 
+  <td>TestNG-tests-1@466822101</td>   <td></td> </tr>
+<tr bgcolor="718392">  <td>20/06/10 10:37:23</td>   <td>12695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyDoLoginTest()[pri:4, instance:com.qa.hubspot.tests.LoginPageTest@5a4ed68f]">verifyDoLoginTest</td> 
+  <td>TestNG-tests-1@466822101</td>   <td></td> </tr>
+<tr bgcolor="8bad7c">  <td>20/06/10 10:37:24</td>   <td>13317</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@5a4ed68f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@466822101</td>   <td></td> </tr>
 </table>
